crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_aliases_cold_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#14 : Data = constrData (trace "tag" in 59) (trace "fields" in (con (list data) [(I 42)])) in
let alias#15 : Data = data#14 in
case@Bool true of
  True -> constr 1
  False -> force (delay (constr 0 data#14 ((case@Data alias#15 of
    DataConstr pair#16 -> \x#17 : int -> constr 0 pair#16 (case@Pair pair#16 of
      Pair tag#18 fields#19 -> constr 0 tag#18 fields#19) x#17) 7) (case@Data alias#15 of
    DataConstr second#20 -> second#20)))
--- unoptimized UPLC
(program 1.1.0
  [(lam data_14
    [(lam alias_15
      (case
        (con bool True)
        (force
          (delay
            (constr 0
              data_14
              [[(lam generated_21
                (force
                  [[[[[[(force (builtin chooseData)) generated_21]
                    (delay
                      [(lam pair_16
                        (lam x_17
                          (constr 0
                            pair_16
                            (case pair_16 (lam tag_18 (lam fields_19 (constr 0 tag_18 fields_19))))
                            x_17)))
                        [(builtin unConstrData) generated_21]])]
                    (delay (error))]
                    (delay (error))]
                    (delay (error))]
                    (delay (error))]))
                alias_15]
                (con integer 7)]
              [(lam generated_22
                (force
                  [[[[[[(force (builtin chooseData)) generated_22]
                    (delay [(lam second_20 second_20) [(builtin unConstrData) generated_22]])]
                    (delay (error))]
                    (delay (error))]
                    (delay (error))]
                    (delay (error))]))
                alias_15])))
        (constr 1)))
      data_14])
    [[(builtin constrData)
      (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])]
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])]])
--- optimized Core
let anf#8 : int = trace "tag" in 59 in
let anf#9 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#1 : Data = constrData anf#8 anf#9 in
constr 1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam anf_2
      [(lam anf_3 [(lam data_4 (constr 1)) [[(builtin constrData) anf_2] anf_3]])
        (force [[builtin_5 (con string "fields")] (delay (con (list data) [(I 42)]))])])
      (force [[builtin_5 (con string "tag")] (delay (con integer 59))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#21 : int = trace "tag" in 59 in
let anf#22 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#14 : Data = constrData anf#21 anf#22 in
let alias#15 : Data = data#14 in
case@Bool true of
  True -> constr 1
  False -> force (delay (let anf#24 : int -> 'erased = case@Data alias#15 of
    DataConstr pair#16 -> \x#17 : int -> let anf#23 : 'erased = case@Pair pair#16 of
      Pair tag#18 fields#19 -> constr 0 tag#18 fields#19 in
    constr 0 pair#16 anf#23 x#17 in
  let anf#25 : 'erased = anf#24 7 in
  let anf#26 : pair int (list Data) = case@Data alias#15 of
    DataConstr second#20 -> second#20 in
  constr 0 data#14 anf#25 anf#26))
--- isolated folded Core
let anf#21 : int = trace "tag" in 59 in
let anf#22 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#14 : Data = constrData anf#21 anf#22 in
let alias#15 : Data = data#14 in
case@Bool true of
  True -> constr 1
  False -> force (delay (let anf#24 : int -> 'erased = let pair#16 : pair int (list Data) = unConstrData alias#15 in
  \x#17 : int -> let anf#23 : 'erased = case@Pair pair#16 of
    Pair tag#18 fields#19 -> constr 0 tag#18 fields#19 in
  constr 0 pair#16 anf#23 x#17 in
  let anf#25 : 'erased = anf#24 7 in
  let anf#26 : pair int (list Data) = let second#20 : pair int (list Data) = unConstrData alias#15 in
  second#20 in
  constr 0 data#14 anf#25 anf#26))
--- isolated cleaned Core
let anf#21 : int = trace "tag" in 59 in
let anf#22 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#14 : Data = constrData anf#21 anf#22 in
constr 1
--- isolated UPLC before
(program 1.1.0
  [(lam anf_21
    [(lam anf_22
      [(lam data_14
        [(lam alias_15
          (case
            (con bool True)
            (force
              (delay
                [(lam anf_24
                  [(lam anf_25
                    [(lam anf_26 (constr 0 data_14 anf_25 anf_26))
                      [(lam generated_27
                        (force
                          [[[[[[(force (builtin chooseData)) generated_27]
                            (delay [(lam second_20 second_20) [(builtin unConstrData) generated_27]])]
                            (delay (error))]
                            (delay (error))]
                            (delay (error))]
                            (delay (error))]))
                        alias_15]])
                    [anf_24 (con integer 7)]])
                  [(lam generated_28
                    (force
                      [[[[[[(force (builtin chooseData)) generated_28]
                        (delay
                          [(lam pair_16
                            (lam x_17
                              [(lam anf_23 (constr 0 pair_16 anf_23 x_17))
                                (case pair_16 (lam tag_18 (lam fields_19 (constr 0 tag_18 fields_19))))]))
                            [(builtin unConstrData) generated_28]])]
                        (delay (error))]
                        (delay (error))]
                        (delay (error))]
                        (delay (error))]))
                    alias_15]]))
            (constr 1)))
          data_14])
        [[(builtin constrData) anf_21] anf_22]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_21
    [(lam anf_22 [(lam data_14 (constr 1)) [[(builtin constrData) anf_21] anf_22]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])])
--- result
(constr 1)
--- logs
["tag", "fields"]
