crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_fields_failure_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#26 : Data = constrData (trace "tag" in 59) (trace "fields" in error) in
let effect#27 : int = trace "between" in 0 in
case@Data data#26 of
  DataConstr pair#28 -> trace "selected" in fstPair pair#28
--- unoptimized UPLC
(program 1.1.0
  [(lam data_26
    [(lam effect_27
      [(lam generated_29
        (force
          [[[[[[(force (builtin chooseData)) generated_29]
            (delay
              [(lam pair_28
                (force
                  [[(force (builtin trace)) (con string "selected")]
                    (delay [(force (force (builtin fstPair))) pair_28])]))
                [(builtin unConstrData) generated_29]])]
            (delay (error))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        data_26])
      (force
        [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
    [[(builtin constrData)
      (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])]
      (force [[(force (builtin trace)) (con string "fields")] (delay (error))])]])
--- optimized Core
let anf#4 : int = trace "tag" in 59 in
let anf#5 : list Data = trace "fields" in error in
let data#1 : Data = constrData anf#4 anf#5 in
let effect#2 : int = trace "between" in 0 in
let pair#3 : pair int (list Data) = unConstrData data#1 in
trace "selected" in anf#4
--- optimized UPLC
(program 1.1.0
  [(lam builtin_11
    [(lam anf_6
      [(lam anf_7
        [(lam data_8
          [(lam effect_9
            [(lam pair_10 (force [[builtin_11 (con string "selected")] (delay anf_6)]))
              [(builtin unConstrData) data_8]])
            (force [[builtin_11 (con string "between")] (delay (con integer 0))])])
          [[(builtin constrData) anf_6] anf_7]])
        (force [[builtin_11 (con string "fields")] (delay (error))])])
      (force [[builtin_11 (con string "tag")] (delay (con integer 59))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#29 : int = trace "tag" in 59 in
let anf#30 : list Data = trace "fields" in error in
let data#26 : Data = constrData anf#29 anf#30 in
let effect#27 : int = trace "between" in 0 in
case@Data data#26 of
  DataConstr pair#28 -> trace "selected" in fstPair pair#28
--- isolated folded Core
let anf#29 : int = trace "tag" in 59 in
let anf#30 : list Data = trace "fields" in error in
let data#26 : Data = constrData anf#29 anf#30 in
let effect#27 : int = trace "between" in 0 in
let pair#28 : pair int (list Data) = unConstrData data#26 in
trace "selected" in fstPair pair#28
--- isolated cleaned Core
let anf#29 : int = trace "tag" in 59 in
let anf#30 : list Data = trace "fields" in error in
let data#26 : Data = constrData anf#29 anf#30 in
let effect#27 : int = trace "between" in 0 in
let pair#28 : pair int (list Data) = unConstrData data#26 in
trace "selected" in anf#29
--- isolated UPLC before
(program 1.1.0
  [(lam anf_29
    [(lam anf_30
      [(lam data_26
        [(lam effect_27
          [(lam generated_31
            (force
              [[[[[[(force (builtin chooseData)) generated_31]
                (delay
                  [(lam pair_28
                    (force
                      [[(force (builtin trace)) (con string "selected")]
                        (delay [(force (force (builtin fstPair))) pair_28])]))
                    [(builtin unConstrData) generated_31]])]
                (delay (error))]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            data_26])
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_29] anf_30]])
      (force [[(force (builtin trace)) (con string "fields")] (delay (error))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_29
    [(lam anf_30
      [(lam data_26
        [(lam effect_27
          [(lam pair_28
            (force [[(force (builtin trace)) (con string "selected")] (delay anf_29)]))
            [(builtin unConstrData) data_26]])
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_29] anf_30]])
      (force [[(force (builtin trace)) (con string "fields")] (delay (error))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])])
--- result
error: ExplicitErrorTerm
--- logs
["tag", "fields"]
