crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_invalid_selected_arity.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(before), pretty(after))"
---
--- before
let data#2 : Data = constrData 59 (con (list data) [(I 42)]) in
case@Data data#2 of
  DataConstr -> 0
--- after
let data#2 : Data = constrData 59 (con (list data) [(I 42)]) in
case@Data data#2 of
  DataConstr -> 0
--- errors
InvalidCase("invalid Data branch")
InvalidCase("invalid Data branch")
